# libfat16

./: .travis.yml  CMakeLists.txt
.travis/: build.sh
examples/: extract.cpp
include/fat16/: fat16.h
src/: fat16.cpp
